--- a/static/styles.css
+++ b/static/styles.css
@@ -52,3 +52,23 @@ input[type="submit"]:hover {
 .result a:hover {
     background-color: #0056b3;
 }
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.image-container img {
+    width: 90%; /* 이미지 너비를 더 크게 설정 */
+    max-width: 800px; /* 최대 너비를 더 크게 설정 */
+    margin: 0 20px; /* 이미지 간 간격을 유지 */
+    border: 5px solid #333; /* 테두리를 더 두껍게 설정 */
+    border-radius: 10px; /* 테두리 모서리 둥글게 */
+}
+
+.prediction-value {
+    color: red;
+    font-weight: bold;
+}
